<resources>
    <string name="app_name">foodie</string>
    <string name="welcome_to_food_delivery_app">Welcome to Food Delivery App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="search_for_restaurants_or_food">Search for restaurants or food</string>
    <string name="categories">Categories</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurant_1">Restaurant 1</string>
    <string name="restaurant_2">Restaurant 2</string>
    <string name="menu">Menu</string>
    <string name="food_1">Food 1</string>
    <string name="food_2">Food 2</string>
    <string name="_25">$25</string>
    <string name="delivery_status_pending">Delivery Status: Pending</string>
    <string name="order_status">Order Status</string>
    <string name="place_order">Place Order</string>
</resources>