<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- User registration and login -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_food_delivery_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_now"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <!-- Restaurant search and selection -->
    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_for_restaurants_or_food"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:autofillHints=""
        android:inputType="TODO"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_category1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_category2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_category1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_restaurant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurants"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_restaurant2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurants"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <!-- Food ordering and payment -->
    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_food1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_food2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_food1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25"
        app:layout_constraintTop_toBottomOf="@+id/tv_food1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_food2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:padding="16dp"/>

    <!-- Order tracking and delivery status updates -->
    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_order"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tv_delivery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_status_pending"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_status"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>



